<?xml version="1.0"?>
<package format="2">
  <name>f1tenth_ll2_global_planner</name>
  <version>0.0.0</version>
  <description>The f1tenth_ll2_global_planner package</description>
  <maintainer email="ashuh223@gmail.com">Bryan Zheng</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>f1tenth_utils</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_routing</depend>
  <depend>roscpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
