<?xml version="1.0"?>
<package format="2">
  <name>f1tenth_racecar_bringup</name>
  <version>0.0.0</version>
  <description>The f1tenth_racecar_bringup package</description>
  <maintainer email="ashuh223@gmail.com">Bryan Zheng</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>f1tenth_msgs</exec_depend>
  <exec_depend>ds4_controller</exec_depend>
  <exec_depend>ds4_driver</exec_depend>
  <exec_depend>path_recorder</exec_depend>
  <exec_depend>lidar_obstacle_detector</exec_depend>
  <exec_depend>safety_controller</exec_depend>
  <exec_depend>collision_warning_system</exec_depend>
</package>
